Add content and new kotlin